# node-canon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: battle_test.py  dbpedia_benchmark.py  run_benchmark.py
benchmarks/datasets/dbpedia/: anchor_data.json  redirect_pairs.json
examples/: graphrag_example.py  llamaindex_example.py  quickstart.py
nodecanon/: __init__.py
nodecanon/adapters/: __init__.py  base.py  graphrag.py  lightrag.py  llamaindex.py  nanographrag.py  neo4j.py  networkx.py
nodecanon/cli/: main.py
nodecanon/core/: __init__.py  blocking.py  builder.py  matching.py  merging.py  models.py  resolver.py  scoring.py
nodecanon/evaluation/: __init__.py  metrics.py
tests/: conftest.py  test_blocking.py  test_cli.py  test_evaluation.py  test_matching.py  test_merging.py  test_models.py  test_resolver.py  test_scoring.py  test_user_api.py
tests/test_adapters/: test_graphrag.py  test_lightrag.py  test_llamaindex.py  test_nanographrag.py  test_neo4j.py  test_networkx.py
